Homework done on 1/22/18

--- a/HardWork2.html
+++ b/HardWork2.html
@@ -197,7 +197,8 @@ qt(1-0.25/2, 48)</code></pre>
 <pre><code>##                 2.5 %     97.5 %
 ## (Intercept) 6.5258378 10.0419735
 ## dist        0.1303926  0.2007426</code></pre>
-<pre class="r"><code>#this is how to calculate the residuals
+<pre class="r"><code>#Also confint(cars.lm, level = (confidence interval))
+#this is how to calculate the residuals
 
 sum(cars.lm$residuals^2)</code></pre>
 <pre><code>## [1] 478.0212</code></pre>
@@ -222,20 +223,20 @@ predict(cars.lm, data.frame(dist=50), interval = &quot;prediction&quot;)</code><
 <div id="section-2.3-1-11" class="section level3">
 <h3>Section 2.3 <span id="recpoints">{1}</span><span id="report">{ 1/1 }</span></h3>
 </div>
-<div id="section-2.4-4" class="section level3">
-<h3>Section 2.4 <span id="recpoints">{4}</span><span id="report">{ / }</span></h3>
+<div id="section-2.4-4-34" class="section level3">
+<h3>Section 2.4 <span id="recpoints">{4}</span><span id="report">{ 3/4}</span></h3>
 </div>
-<div id="section-2.5-6" class="section level3">
-<h3>Section 2.5 <span id="recpoints">{6}</span><span id="report">{ / }</span></h3>
+<div id="section-2.5-6-5-6" class="section level3">
+<h3>Section 2.5 <span id="recpoints">{6}</span><span id="report">{ 5/ 6}</span></h3>
 </div>
-<div id="section-2.6-3" class="section level3">
-<h3>Section 2.6 <span id="recpoints">{3}</span><span id="report">{ / }</span></h3>
+<div id="section-2.6-3-33" class="section level3">
+<h3>Section 2.6 <span id="recpoints">{3}</span><span id="report">{ 3/3}</span></h3>
 </div>
-<div id="section-2.7-8" class="section level3">
-<h3>Section 2.7 <span id="recpoints">{8}</span><span id="report">{ / }</span></h3>
+<div id="section-2.7-8-5-8" class="section level3">
+<h3>Section 2.7 <span id="recpoints">{8}</span><span id="report">{ 5/ 8}</span></h3>
 </div>
-<div id="section-2.8-4" class="section level3">
-<h3>Section 2.8 <span id="recpoints">{4}</span><span id="report">{ / }</span></h3>
+<div id="section-2.8-4-1-4" class="section level3">
+<h3>Section 2.8 <span id="recpoints">{4}</span><span id="report">{ 1/ 4}</span></h3>
 </div>
 <div id="section-2.9-3" class="section level3">
 <h3>Section 2.9 <span id="recpoints">{3}</span><span id="report">{ / }</span></h3>
